apps/tekton-pipelines/tekton/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    external-dns.alpha.kubernetes.io/my-target: internal
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16
spec:
  ingressClassName: nginx
  rules:
    - host: tekton.k8s.jsteuernagel.de
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - tekton.k8s.jsteuernagel.de
      secretName: tekton-k8s-jsteuernagel-de-tls
